GH-560 Replace V11 calls with other indexes calls